--- a/header.html
+++ b/header.html
@@ -20,7 +20,7 @@
                             <a href="starfighter.html" class="header__link">Starfighter</a>
                             <a href="organ-defender.html" class="header__link">Organ Defender</a>
                             <a href="sams-town.html" class="header__link">Sam's Town</a>
-                            <a href="mars-base.html" class="header__link">Mars Base</a>
+                            <!--<a href="mars-base.html" class="header__link">Mars Base</a>-->
                             <a href="ai-pathfinding.html" class="header__link">AI Pathfinding</a>
                             <a href="mad-dash-dispatch.html" class="header__link">Mad Dash Dispatch</a>
                         </div>
