--- a/mad-dash-dispatch.html
+++ b/mad-dash-dispatch.html
@@ -1,230 +1,147 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Case Study of Project 3</title>
-    <meta name="description" content="Case study page of Project" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Mad Dash Dispatch</title>
+  <meta name="description" content="Starfighter: Earth's Only Hope" />
 
-    <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/style.css" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700;900&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <header class="header">
-      <div class="header__content">
-        <div class="header__logo-container">
-          <div class="header__logo-img-cont">
-            <img
-              src="assets/png/john-doe.png"
-              alt="Ram Maheshwari Logo Image"
-              class="header__logo-img"
-            />
-          </div>
-          <span class="header__logo-sub">John Doe</span>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+          href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700;900&display=swap"
+          rel="stylesheet"
+  />
+  <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+  <script>
+    $(function(){
+      $("#footer").load("footer.html");
+    });
+  </script>
+  <script>
+    $(function(){
+      $("#header").load("header.html");
+    });
+  </script>
+</head>
+<body>
+<div id="header"> </div>
+<section class="project-cs-hero">
+  <div class="project-cs-hero__content">
+    <h1 class="heading-primary">Starfighter: Earth's Only Hope</h1>
+    <div class="project-cs-hero__info">
+      <p class="text-primary">
+        This is a VR action spaceflight game developed during IGB388 Design and Development of Immersive Environments
+      </p>
+    </div>
+    <div class="project-cs-hero__cta">
+      <!--          <a href="#" class="btn btn&#45;&#45;bg" target="_blank">Live Link</a>-->
+      <iframe frameborder="0"
+              height="167"
+              src="https://itch.io/embed/2099661?bg_color=080808&amp;fg_color=dbdbdb&amp;border_color=2a2a2a" width="552">
+        <a href="https://foodle.itch.io/starfighter-earths-only-hope">Starfighter: Earth's Only Hope by Jack Waldron</a>
+      </iframe>
+    </div>
+  </div>
+</section>
+<section class="project-details">
+  <div class="main-container">
+    <div class="project-details__content">
+      <div class="slideshow-container">
+        <div class="mySlides fade">
+          <img src="assets/starfighter/starfighter-logo.png" style="width:100%; height:100%" alt="Starfighter Logo">
         </div>
-        <div class="header__main">
-          <ul class="header__links">
-            <li class="header__link-wrapper">
-              <a href="index.html" class="header__link"> Home </a>
-            </li>
-            <li class="header__link-wrapper">
-              <a href="index.html#about" class="header__link">About </a>
-            </li>
-            <li class="header__link-wrapper">
-              <a href="index.html#projects" class="header__link">
-                Projects
-              </a>
-            </li>
-            <li class="header__link-wrapper">
-              <a href="index.html#contact" class="header__link"> Contact </a>
-            </li>
-          </ul>
-          <div class="header__main-ham-menu-cont">
-            <img
-              src="assets/svg/ham-menu.svg"
-              alt="hamburger menu"
-              class="header__main-ham-menu"
-            />
-            <img
-              src="assets/svg/ham-menu-close.svg"
-              alt="hamburger menu close"
-              class="header__main-ham-menu-close d-none"
-            />
-          </div>
+        <div class="mySlides fade">
+          <img src="assets/starfighter/starfighter1.jpg" style="width:100%; height:100%" alt="Starfighter screenshot">
         </div>
+        <div class="mySlides fade">
+          <img src="assets/starfighter/starfighter2.jpg" style="width:100%; height:100%" alt="Starfighter screenshot">
+        </div>
+        <div class="mySlides fade">
+          <img src="assets/starfighter/starfighter3.jpg" style="width:100%; height:100%" alt="Starfighter screenshot">
+        </div><div class="mySlides fade">
+        <img src="assets/starfighter/starfighter4.jpg" style="width:100%; height:100%" alt="Starfighter screenshot">
       </div>
-      <div class="header__sm-menu">
-        <div class="header__sm-menu-content">
-          <ul class="header__sm-menu-links">
-            <li class="header__sm-menu-link">
-              <a href="index.html"> Home </a>
-            </li>
-
-            <li class="header__sm-menu-link">
-              <a href="index.html#about"> About </a>
-            </li>
-
-            <li class="header__sm-menu-link">
-              <a href="index.html#projects"> Projects </a>
-            </li>
-
-            <li class="header__sm-menu-link">
-              <a href="index.html#contact"> Contact </a>
-            </li>
-          </ul>
-        </div>
+        <a class="prev" onclick="plusSlides(-1)">❮</a>
+        <a class="next" onclick="plusSlides(1)">❯</a>
       </div>
-    </header>
-    <section class="project-cs-hero">
-      <div class="project-cs-hero__content">
-        <h1 class="heading-primary">Project 3</h1>
-        <div class="project-cs-hero__info">
-          <p class="text-primary">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos
-            in numquam incidunt earum quaerat cum fuga, atque similique natus
-            nobis sit.
+      <br>
+
+      <div style="text-align:center">
+        <span class="dot" onclick="currentSlide(1)"></span>
+        <span class="dot" onclick="currentSlide(2)"></span>
+        <span class="dot" onclick="currentSlide(3)"></span>
+        <span class="dot" onclick="currentSlide(4)"></span>
+        <span class="dot" onclick="currentSlide(5)"></span>
+      </div>
+
+      <script src="carousel.js"></script>
+
+      <div class="project-details__content-main">
+        <div class="project-details__desc">
+          <h3 class="project-details__content-title">Project Overview</h3>
+          <p class="project-details__desc-para">
+            During development of Starfighter: Earth's Only Hope I Acted as lead
+            programmer, working with another programmer and a game designer.
+            This game started as my own pitch, then evolving into the game it is
+            after incorporating elements from the rest of the groups pitches and ideas.
           </p>
+          <p class="project-details__desc-para">
+            This project was made in Unity and programmed in C#. We opted to use the
+            OpenXR framework for interacting with the VR headset within the project.
+            This allowed me to further my Unity/C# skills while learning about development
+            for VR and all the challenges within that field. This also allowed for me to gain
+            experience developing for multiple platforms, Desktop (PCVR) and Android (Quest Standalone).
+          </p>
+          <ul style="list-style-type:disc; font-weight: bold" class="project-details__desc-para">
+            <li style="font-weight: normal">During this project, I undertook the following roles/tasks:</li>
+            <li>Lead Programmer</li>
+            <li>Concept/Pitch Designer</li>
+            <li>Playtesting</li>
+          </ul>
         </div>
-        <div class="project-cs-hero__cta">
-          <a href="#" class="btn btn--bg" target="_blank">Live Link</a>
+        <div class="project-details__tools-used">
+          <h3 class="project-details__content-title">Tools/Skills Used</h3>
+          <div class="skills">
+            <div class="skills__skill">C#</div>
+            <div class="skills__skill">Unity</div>
+            <div class="skills__skill">OpenXR</div>
+            <div class="skills__skill">Oculus SDK</div>
+            <div class="skills__skill">Git</div>
+            <div class="skills__skill">GitHub</div>
+            <div class="skills__skill">SCRUM</div>
+            <div class="skills__skill">Desktop</div>
+            <div class="skills__skill">Android</div>
+          </div>
+        </div>
+        <div>
+          <table style="width: 100%;">
+            <tr>
+              <td style="width: 50%">
+                <a href="mad-dash-dispatch.html"
+                   class="btn btn--med btn--theme dynamicBgClr"
+                   target="_self"
+                   style="float:left"
+                >Previous Project</a>
+              </td>
+              <td style="width: 50%">
+                <a href="organ-defender.html"
+                   class="btn btn--med btn--theme dynamicBgClr"
+                   target="_self"
+                   style="float:right"
+                >Next Project</a>
+              </td>
+            </tr>
+          </table>
         </div>
       </div>
-    </section>
-    <section class="project-details">
-      <div class="main-container">
-        <div class="project-details__content">
-          <div class="project-details__showcase-img-cont">
-            <img
-              src="assets/jpeg/project-mockup-example.jpeg"
-              alt="Project Image"
-              class="project-details__showcase-img"
-            />
-          </div>
-          <div class="project-details__content-main">
-            <div class="project-details__desc">
-              <h3 class="project-details__content-title">Project Overview</h3>
-              <p class="project-details__desc-para">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque
-                alias tenetur minus quaerat aliquid, aut provident blanditiis,
-                deleniti aspernatur ipsam eaque veniam voluptatem corporis vitae
-                mollitia laborum corrupti ullam rem. Lorem ipsum dolor sit amet
-                consectetur adipisicing elit. Neque alias tenetur minus quaerat
-                aliquid, aut provident blanditiis, deleniti aspernatur ipsam
-                eaque veniam voluptatem corporis vitae mollitia laborum corrupti
-                ullam rem?
-              </p>
-              <p class="project-details__desc-para">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque
-                alias tenetur minus quaerat aliquid, aut provident blanditiis,
-                deleniti aspernatur ipsam eaque veniam voluptatem corporis vitae
-                mollitia laborum corrupti ullam rem?
-              </p>
-            </div>
-            <div class="project-details__tools-used">
-              <h3 class="project-details__content-title">Tools Used</h3>
-              <div class="skills">
-                <div class="skills__skill">HTML</div>
-                <div class="skills__skill">CSS</div>
-                <div class="skills__skill">JavaScript</div>
-                <div class="skills__skill">React</div>
-                <div class="skills__skill">SASS</div>
-                <div class="skills__skill">GIT</div>
-                <div class="skills__skill">Shopify</div>
-                <div class="skills__skill">Wordpress</div>
-                <div class="skills__skill">Google ADS</div>
-                <div class="skills__skill">Facebook Ads</div>
-                <div class="skills__skill">Android</div>
-                <div class="skills__skill">IOS</div>
-              </div>
-            </div>
-            <div class="project-details__links">
-              <h3 class="project-details__content-title">See Live</h3>
-              <a
-                href="#"
-                class="btn btn--med btn--theme project-details__links-btn"
-                target="_blank"
-                >Live Link</a
-              >
-              <a
-                href="#"
-                class="btn btn--med btn--theme-inv project-details__links-btn"
-                target="_blank"
-                >Code Link</a
-              >
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <footer class="main-footer">
-      <div class="main-container">
-        <div class="main-footer__upper">
-          <div class="main-footer__row main-footer__row-1">
-            <h2 class="heading heading-sm main-footer__heading-sm">
-              <span>Social</span>
-            </h2>
-            <div class="main-footer__social-cont">
-              <a target="_blank" rel="noreferrer" href="#">
-                <img
-                  class="main-footer__icon"
-                  src="assets/png/linkedin-ico.png"
-                  alt="icon"
-                />
-              </a>
-              <a target="_blank" rel="noreferrer" href="#">
-                <img
-                  class="main-footer__icon"
-                  src="assets/png/github-ico.png"
-                  alt="icon"
-                />
-              </a>
-              <a target="_blank" rel="noreferrer" href="#">
-                <img
-                  class="main-footer__icon"
-                  src="assets/png/twitter-ico.png"
-                  alt="icon"
-                />
-              </a>
-              <a target="_blank" rel="noreferrer" href="#">
-                <img
-                  class="main-footer__icon"
-                  src="assets/png/yt-ico.png"
-                  alt="icon"
-                />
-              </a>
-              <a target="_blank" rel="noreferrer" href="#">
-                <img
-                  class="main-footer__icon main-footer__icon--mr-none"
-                  src="assets/png/insta-ico.png"
-                  alt="icon"
-                />
-              </a>
-            </div>
-          </div>
-          <div class="main-footer__row main-footer__row-2">
-            <h4 class="heading heading-sm text-lt">John Doe</h4>
-            <p class="main-footer__short-desc">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit facilis
-              tempora explicabo quae quod deserunt
-            </p>
-          </div>
-        </div>
-
-        <div class="main-footer__lower">
-          &copy; Copyright 2021. Made by
-          <a rel="noreferrer" target="_blank" href="https://rammaheshwari.com"
-            >Ram Maheshwari</a
-          >
-        </div>
-      </div>
-    </footer>
-    <script src="index.js"></script>
+    </div>
+  </div>
+</section>
+<div id="footer"></div>
+<script src="index.js"></script>
   </body>
 </html>
