--- a/organ-defender.html
+++ b/organ-defender.html
@@ -72,6 +72,8 @@
         <span class="dot" onclick="currentSlide(4)"></span>
       </div>
 
+      <script src="carousel.js"></script>
+
       <div class="project-details__content-main">
         <div class="project-details__desc">
           <h3 class="project-details__content-title">Project Overview</h3>
