--- a/starfighter.html
+++ b/starfighter.html
@@ -26,6 +26,7 @@
         $("#header").load("header.html");
       });
     </script>
+    <script src="index.js"></script>
   </head>
   <body>
     <div id="header"> </div>
@@ -77,6 +78,8 @@
             <span class="dot" onclick="currentSlide(4)"></span>
             <span class="dot" onclick="currentSlide(5)"></span>
           </div>
+
+          <script src="carousel.js"></script>
 
           <div class="project-details__content-main">
             <div class="project-details__desc">
@@ -140,6 +143,5 @@
       </div>
     </section>
     <div id="footer"></div>
-    <script src="index.js"></script>
   </body>
 </html>
