--- a/index.html
+++ b/index.html
@@ -220,8 +220,8 @@
                 </div>
               </div>
             </div>
-            <div class="mySlides fade">
-              <!--Mars Base-->
+            <!--<div class="mySlides fade">
+              &lt;!&ndash;Mars Base&ndash;&gt;
               <div class="projects__row">
                 <div class="projects__row-img-cont">
                   <img
@@ -239,13 +239,13 @@
                   </p>
                   <a
                           href="mars-base.html"
-                          class="btn btn--med btn--theme dynamicBgClr"
+                          class="btn btn&#45;&#45;med btn&#45;&#45;theme dynamicBgClr"
                           target="_self"
                   >View Project</a
                   >
                 </div>
               </div>
-            </div>
+            </div>-->
             <div class="mySlides fade">
               <!--AI Pathfinding-->
               <div class="projects__row">
@@ -284,7 +284,7 @@
             <span class="dot" onclick="currentSlide(3)"></span>
             <span class="dot" onclick="currentSlide(4)"></span>
             <span class="dot" onclick="currentSlide(5)"></span>
-            <span class="dot" onclick="currentSlide(6)"></span>
+            <!--<span class="dot" onclick="currentSlide(6)"></span>-->
           </div>
 
           <script>
