--- a/sams-town.html
+++ b/sams-town.html
@@ -84,6 +84,8 @@
         <span class="dot" onclick="currentSlide(7)"></span>
       </div>
 
+      <script src="carousel.js"></script>
+
       <div class="project-details__content-main">
         <div class="project-details__desc">
           <h3 class="project-details__content-title">Project Overview</h3>
