Mad Dash dispatch Page content

--- a/mad-dash-dispatch.html
+++ b/mad-dash-dispatch.html
@@ -31,19 +31,17 @@
 <div id="header"> </div>
 <section class="project-cs-hero">
   <div class="project-cs-hero__content">
-    <h1 class="heading-primary">Starfighter: Earth's Only Hope</h1>
+    <h1 class="heading-primary">Mad Dash Dispatch VR</h1>
     <div class="project-cs-hero__info">
       <p class="text-primary">
-        This is a VR action spaceflight game developed during IGB388 Design and Development of Immersive Environments
+        This is a VR driving game developed during VR Jam 2023
       </p>
     </div>
     <div class="project-cs-hero__cta">
-      <!--          <a href="#" class="btn btn&#45;&#45;bg" target="_blank">Live Link</a>-->
       <iframe frameborder="0"
-              height="167"
-              src="https://itch.io/embed/2099661?bg_color=080808&amp;fg_color=dbdbdb&amp;border_color=2a2a2a" width="552">
-        <a href="https://foodle.itch.io/starfighter-earths-only-hope">Starfighter: Earth's Only Hope by Jack Waldron</a>
-      </iframe>
+      src="https://itch.io/embed/2141564?bg_color=080808&amp;fg_color=dbdbdb&amp;link_color=f13838&amp;border_color=2a2a2a"
+              width="552" height="167"><a href="https://foodle.itch.io/mad-dash-dispatch">Mad Dash Dispatch by Foodle
+      </a></iframe>
     </div>
   </div>
 </section>
@@ -52,19 +50,12 @@
     <div class="project-details__content">
       <div class="slideshow-container">
         <div class="mySlides fade">
-          <img src="assets/starfighter/starfighter-logo.png" style="width:100%; height:100%" alt="Starfighter Logo">
+          <img src="assets/mad-dash-dispatch/mad-dash-dispatch-logo.jpg" style="width:100%; height:100%" alt="Starfighter Logo">
         </div>
         <div class="mySlides fade">
-          <img src="assets/starfighter/starfighter1.jpg" style="width:100%; height:100%" alt="Starfighter screenshot">
+          <img src="assets/mad-dash-dispatch/mad-dash-dispatch-logo.jpg" style="width:100%; height:100%" alt="Starfighter screenshot">
         </div>
-        <div class="mySlides fade">
-          <img src="assets/starfighter/starfighter2.jpg" style="width:100%; height:100%" alt="Starfighter screenshot">
-        </div>
-        <div class="mySlides fade">
-          <img src="assets/starfighter/starfighter3.jpg" style="width:100%; height:100%" alt="Starfighter screenshot">
-        </div><div class="mySlides fade">
-        <img src="assets/starfighter/starfighter4.jpg" style="width:100%; height:100%" alt="Starfighter screenshot">
-      </div>
+
         <a class="prev" onclick="plusSlides(-1)">❮</a>
         <a class="next" onclick="plusSlides(1)">❯</a>
       </div>
@@ -73,9 +64,9 @@
       <div style="text-align:center">
         <span class="dot" onclick="currentSlide(1)"></span>
         <span class="dot" onclick="currentSlide(2)"></span>
-        <span class="dot" onclick="currentSlide(3)"></span>
+        <!--<span class="dot" onclick="currentSlide(3)"></span>
         <span class="dot" onclick="currentSlide(4)"></span>
-        <span class="dot" onclick="currentSlide(5)"></span>
+        <span class="dot" onclick="currentSlide(5)"></span>-->
       </div>
 
       <script src="carousel.js"></script>
@@ -84,23 +75,18 @@
         <div class="project-details__desc">
           <h3 class="project-details__content-title">Project Overview</h3>
           <p class="project-details__desc-para">
-            During development of Starfighter: Earth's Only Hope I Acted as lead
-            programmer, working with another programmer and a game designer.
-            This game started as my own pitch, then evolving into the game it is
-            after incorporating elements from the rest of the groups pitches and ideas.
-          </p>
-          <p class="project-details__desc-para">
-            This project was made in Unity and programmed in C#. We opted to use the
+            I solo developed Mad Dash Dispatch for the VR Jam 2023.
+            This project was made in Unity and programmed in C#. I opted to use the
             OpenXR framework for interacting with the VR headset within the project.
-            This allowed me to further my Unity/C# skills while learning about development
-            for VR and all the challenges within that field. This also allowed for me to gain
-            experience developing for multiple platforms, Desktop (PCVR) and Android (Quest Standalone).
+            This allowed me to further my Unity/C# skills as well as my skills in VR Development.
+            This also allowed for me to gain further experience developing for multiple platforms,
+            Desktop (PCVR) and Android (Quest Standalone).
           </p>
           <ul style="list-style-type:disc; font-weight: bold" class="project-details__desc-para">
             <li style="font-weight: normal">During this project, I undertook the following roles/tasks:</li>
-            <li>Lead Programmer</li>
-            <li>Concept/Pitch Designer</li>
-            <li>Playtesting</li>
+            <li>Programmer</li>
+            <li>Game Designer</li>
+            <li>Level Designer</li>
           </ul>
         </div>
         <div class="project-details__tools-used">
@@ -109,26 +95,26 @@
             <div class="skills__skill">C#</div>
             <div class="skills__skill">Unity</div>
             <div class="skills__skill">OpenXR</div>
-            <div class="skills__skill">Oculus SDK</div>
             <div class="skills__skill">Git</div>
-            <div class="skills__skill">GitHub</div>
-            <div class="skills__skill">SCRUM</div>
-            <div class="skills__skill">Desktop</div>
-            <div class="skills__skill">Android</div>
+            <div class="skills__skill">Sourcetree</div>
+            <div class="skills__skill">Gitea</div>
+            <div class="skills__skill">Publishing</div>
+            <div class="skills__skill">PCVR</div>
+            <div class="skills__skill">Quest 2</div>
           </div>
         </div>
         <div>
           <table style="width: 100%;">
             <tr>
               <td style="width: 50%">
-                <a href="mad-dash-dispatch.html"
+                <a href="ai-pathfinding.html"
                    class="btn btn--med btn--theme dynamicBgClr"
                    target="_self"
                    style="float:left"
                 >Previous Project</a>
               </td>
               <td style="width: 50%">
-                <a href="organ-defender.html"
+                <a href="starfighter.html"
                    class="btn btn--med btn--theme dynamicBgClr"
                    target="_self"
                    style="float:right"
