Content done besides final images

--- a/footer.html
+++ b/footer.html
@@ -9,14 +9,21 @@
                     <a target="_blank" rel="noreferrer" href="https://www.linkedin.com/in/jack-waldron-66175b20a/">
                         <img
                                 class="main-footer__icon"
-                                src="./assets/png/linkedin-ico.png"
+                                src="assets/icons/linkedin-ico.png"
                                 alt="icon"
                         />
                     </a>
                     <a target="_blank" rel="noreferrer" href="https://github.com/Foodle1">
                         <img
                                 class="main-footer__icon"
-                                src="./assets/png/github-ico.png"
+                                src="assets/icons/github-ico.png"
+                                alt="icon"
+                        />
+                    </a>
+                    <a target="_blank" rel="noreferrer" href="https://foodle.itch.io">
+                        <img
+                                class="main-footer__icon"
+                                src="assets/icons/itch-logo.png"
                                 alt="icon"
                         />
                     </a>
