--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         <div class="home-hero__info">
           <p class="text-primary">
             I am a <b>Game Developer</b> who has been developing games for a few years
-            and programming for longer. I enjoy learning new skills and pushing
-            my knowledge further as a developer.
+            and <b>programming</b> for longer. I enjoy <b>learning</b> new skills and pushing
+            my knowledge further as a <b>developer</b>.
           </p>
         </div>
         <div class="home-hero__cta">
@@ -63,7 +63,7 @@
                 <strong> Brisbane, Australia </strong>. I've done many game projects requiring vast
                 skill sets ranging from, <strong>Virtual Reality</strong>, <strong>Multiplayer</strong>,
                 <strong>First-Person</strong>, <strong>Tower Defence</strong>, <strong>Endless Survival</strong>,
-                and more!
+                and <b>more</b>!
               </p>
               <p class="about__content-details-para">
                 If you feel I am a match for your company or project, I'm open to starting
@@ -323,7 +323,7 @@
         <h2 class="heading heading-sec heading-sec__mb-med">
           <span class="heading-sec__main heading-sec__main--lt">Contact</span>
           <span class="heading-sec__sub heading-sec__sub--lt">
-            Feel free to contact me in the below form or via email at EMAIL@DOMAIN
+            Feel free to contact me in the below form <!--or via email at EMAIL@DOMAIN-->
           </span>
         </h2>
         <div class="contact__form-container">
