--- a/mad-dash-dispatch.html
+++ b/mad-dash-dispatch.html
@@ -75,10 +75,12 @@
         <div class="project-details__desc">
           <h3 class="project-details__content-title">Project Overview</h3>
           <p class="project-details__desc-para">
-            I solo developed Mad Dash Dispatch for the VR Jam 2023.
+            I solo developed Mad Dash Dispatch for the VR Jam 2023 game jam. This
+            game jams theme was "Special Delivery". The visuals are from free assets
+            and I built the level layout an all the mechanics for the jam.
             This project was made in Unity and programmed in C#. I opted to use the
             OpenXR framework for interacting with the VR headset within the project.
-            This allowed me to further my Unity/C# skills as well as my skills in VR Development.
+            This allowed me to further my Unity/C# skills as well as my skills in XR Development.
             This also allowed for me to gain further experience developing for multiple platforms,
             Desktop (PCVR) and Android (Quest Standalone).
           </p>
