--- a/header.html
+++ b/header.html
@@ -1,7 +1,7 @@
 <header class="header">
     <div class="header__content">
         <div class="header__logo-container">
-            <span class="header__logo-sub">Jack Waldron</span>
+            <a class="header__logo-sub" href="index.html">Jack Waldron</a>
         </div>
         <div class="header__main">
             <ul class="header__links">
