Fix hamburger menu again

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                           src="assets/starfighter/starfighter-logo.png"
                           alt="Earths only hope screenshot"
                           class="projects__row-img"
-                          loading="lazy"
+                          loading="eager"
                   />
                 </div>
                 <div class="projects__row-content">
@@ -220,38 +220,12 @@
                 </div>
               </div>
             </div>
-            <!--<div class="mySlides fade">
-              &lt;!&ndash;Mars Base&ndash;&gt;
-              <div class="projects__row">
-                <div class="projects__row-img-cont">
-                  <img
-                          src="./assets/jpeg/project-mockup-example.jpeg"
-                          alt="Software Screenshot"
-                          class="projects__row-img"
-                          loading="lazy"
-                  />
-                </div>
-                <div class="projects__row-content">
-                  <h3 class="projects__row-content-title">Mars Base</h3>
-                  <p class="projects__row-content-desc">
-                    Mars Base is a small game where the focus was on level design using tiles. This was developed by
-                    myself and 3 others at QUT for the unit IGB321: Immersive Game Level Design.
-                  </p>
-                  <a
-                          href="mars-base.html"
-                          class="btn btn&#45;&#45;med btn&#45;&#45;theme dynamicBgClr"
-                          target="_self"
-                  >View Project</a
-                  >
-                </div>
-              </div>
-            </div>-->
             <div class="mySlides fade">
               <!--AI Pathfinding-->
               <div class="projects__row">
                 <div class="projects__row-img-cont">
                   <img
-                          src="./assets/jpeg/project-mockup-example.jpeg"
+                          src="./assets/organ-defender/organ-defender-logo.jpg"
                           alt="Software Screenshot"
                           class="projects__row-img"
                           loading="lazy"
