--- a/header.html
+++ b/header.html
@@ -1,3 +1,6 @@
+<head>
+    <script src="index.js"></script>
+</head>
 <header class="header">
     <div class="header__content">
         <div class="header__logo-container">
