--- a/starfighter.html
+++ b/starfighter.html
@@ -56,6 +56,12 @@
               <img src="assets/starfighter/starfighter-logo.png" style="width:100%; height:100%" alt="Starfighter Logo">
             </div>
             <div class="mySlides fade">
+              <img src="assets/starfighter/starfighter-throttle.gif" style="width:100%; height:100%" alt="Starfighter Throttle Gif">
+            </div>
+            <div class="mySlides fade">
+              <img src="assets/starfighter/starfighter-joystick.gif" style="width:100%; height:100%" alt="Starfighter Joystick Gif">
+            </div>
+            <div class="mySlides fade">
               <img src="assets/starfighter/starfighter1.jpg" style="width:100%; height:100%" alt="Starfighter screenshot">
             </div>
             <div class="mySlides fade">
@@ -77,6 +83,8 @@
             <span class="dot" onclick="currentSlide(3)"></span>
             <span class="dot" onclick="currentSlide(4)"></span>
             <span class="dot" onclick="currentSlide(5)"></span>
+            <span class="dot" onclick="currentSlide(6)"></span>
+            <span class="dot" onclick="currentSlide(7)"></span>
           </div>
 
           <script src="carousel.js"></script>
