Fix sams town title

--- a/sams-town.html
+++ b/sams-town.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Organ Defender</title>
+  <title>Sam's Town</title>
   <meta name="description" content="Sam's Town" />
 
   <link rel="stylesheet" href="css/style.css" />
