--- a/starfighter.html
+++ b/starfighter.html
@@ -40,7 +40,7 @@
         </div>
         <div class="project-cs-hero__cta">
 <!--          <a href="#" class="btn btn&#45;&#45;bg" target="_blank">Live Link</a>-->
-          <iframe frameborder="0"
+          <iframe class="itch" frameborder="0"
                   height="167"
                   src="https://itch.io/embed/2099661?bg_color=080808&amp;fg_color=dbdbdb&amp;border_color=2a2a2a" width="552">
             <a href="https://foodle.itch.io/starfighter-earths-only-hope">Starfighter: Earth's Only Hope by Jack Waldron</a>
