Finish AI pathfinding

--- a/index.html
+++ b/index.html
@@ -225,8 +225,8 @@
               <div class="projects__row">
                 <div class="projects__row-img-cont">
                   <img
-                          src="./assets/organ-defender/organ-defender-logo.jpg"
-                          alt="Software Screenshot"
+                          src="./assets/pathfinding/pathfinding-logo.png"
+                          alt="AI Pathfinding Logo"
                           class="projects__row-img"
                           loading="lazy"
                   />
