--- a/ai-pathfinding.html
+++ b/ai-pathfinding.html
@@ -37,11 +37,6 @@
         This is prototype to demonstrate AI pathfinding using A* and Greedy
       </p>
     </div>
-    <div class="project-cs-hero__cta">
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/kyPFBtktI5o" title="YouTube video player"
-              frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              allowfullscreen></iframe>
-    </div>
   </div>
 </section>
 <section class="project-details">
@@ -49,7 +44,13 @@
     <div class="project-details__content">
       <div class="slideshow-container">
         <div class="mySlides fade">
-          <img src="assets/organ-defender/organ-defender-logo.jpg" style="width:100%; height:100%" alt="AI Pathfinding Logo">
+          <img src="assets/pathfinding/pathfinding-logo.png" style="width:100%; height:100%" alt="AI Pathfinding Logo">
+        </div>
+        <div class="mySlides fade">
+          <img src="assets/pathfinding/pathfinding-player.gif" style="width:100%; height:100%" alt="AI Pathfinding Player">
+        </div>
+        <div class="mySlides fade">
+          <img src="assets/pathfinding/pathfinding-enemies.gif" style="width:100%; height:100%" alt="AI Pathfinding Enemies">
         </div>
         <a class="prev" onclick="plusSlides(-1)">❮</a>
         <a class="next" onclick="plusSlides(1)">❯</a>
@@ -58,9 +59,8 @@
 
       <div style="text-align:center">
         <span class="dot" onclick="currentSlide(1)"></span>
-        <!--<span class="dot" onclick="currentSlide(2)"></span>
+        <span class="dot" onclick="currentSlide(2)"></span>
         <span class="dot" onclick="currentSlide(3)"></span>
-        <span class="dot" onclick="currentSlide(4)"></span>-->
       </div>
 
       <script src="carousel.js"></script>
@@ -73,6 +73,9 @@
             The aim of the project is to incorporate and understand common AI
             pathfinding methods, A* and Greedy, and when and where they should be used.
             The NPCs also had finite state machines controlling their logic.
+            The AI use greedy whereas the player uses A*. This is due to A* being more accurate
+            but more computationally complex, so it is reserved for more important movement like
+            the player.
           </p>
           <p class="project-details__desc-para">
             This project was made in Unity and programmed in C#. A* and Greedy were
