--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                           src="./assets/organ-defender/organ-defender-logo.jpg"
                           alt="Organ Defender Logo"
                           class="projects__row-img"
-                          loading="lazy"
+                          loading="eager"
                   />
                 </div>
                 <div class="projects__row-content">
@@ -175,7 +175,7 @@
                           src="./assets/sams-town/sams-town-logo.png"
                           alt="Software Screenshot"
                           class="projects__row-img"
-                          loading="lazy"
+                          loading="eager"
                   />
                 </div>
                 <div class="projects__row-content">
@@ -202,7 +202,7 @@
                           src="./assets/mad-dash-dispatch/mad-dash-dispatch-logo.jpg"
                           alt="Software Screenshot"
                           class="projects__row-img"
-                          loading="lazy"
+                          loading="eager"
                   />
                 </div>
                 <div class="projects__row-content">
@@ -228,7 +228,7 @@
                           src="./assets/pathfinding/pathfinding-logo.png"
                           alt="AI Pathfinding Logo"
                           class="projects__row-img"
-                          loading="lazy"
+                          loading="eager"
                   />
                 </div>
                 <div class="projects__row-content">
